--- a/doc/龙晶毅_10164507119_finalreport.md
+++ b/doc/龙晶毅_10164507119_finalreport.md
@@ -4,6 +4,7 @@
 > 基于此，我们想做的产品是一款面向中学生的画图app。考虑到中学生主要学习且应用较多的函数是二次函数，因此我们的web app主要是针对二次函数的画图功能。与传统的画图软件不同的是，我们设计的画图功能更加完善、全面，而并不是简单地根据函数方程式在坐标系中画出二次函数的图像，我们的用户可以实现与图像的交互，比如用户可以通过鼠标拖动函数图像或者是图像上的坐标点。除了画图的功能外，我们的web app实现的是二次函数的一条龙服务，在这个app上还包含有关二次函数的基础知识，如二次函数的表示方法、二次函数的图像和性质、二次函数与方程不等式、二次函数应用题。在知识的设置上也不是知识简单的堆叠，而是把知识点和图像相结合，在对应知识板块的旁边放置一个函数画图模块，用户可以根据学习的知识在画图模块在进行实践。或者是在做应用题的时候，根据对应的系数在画图模块画二次函数的图像，这样用户就可以边做题边分析图像。
 >因此，我们想做的这一款web app整体功能架构并不大，但它专注于画图这一功能，希望能把这一功能做得精细，能够满足用户对于二次函数画图的所有需求。真正地帮助用户解决在学习中遇到的阻碍，无论是用户在刚学习二次函数的阶段，还是需要二次函数图像来做题时，都可以使用我们这款产品。
 在
+![contributorpng](https://github.com/ECNU-DEIT-2016/Project_Quadratic-function/blob/master/imag/1.png)
 
 ## 需求
 >在这里，你们需要尝试说服读者，你们项目好在哪里，有哪些功能。     
