--- a/doc/龙晶毅_10164507119_finalreport.md
+++ b/doc/龙晶毅_10164507119_finalreport.md
@@ -35,8 +35,7 @@
 >用户首先进入系统时需要注册，输入自己的信息，点击确定之后，数据会保存到数据库中，当存入到数据库当中后，用户就可以直接输入用户名和密码进行登录，当用户名和密码匹配之后会进入系统，进入之后才可以查看系统当中的知识点信息。可点击查看二次函数的表达方式、二次函数的图像和性质、实际问题与二次函数的知识点。在查看知识点的同时，可以根据相应的内容，在页面的右边输入二次函数不同的a、b、c三个系数的值，来观察二次函数的图像。如果我想要了解如果a/b/c值变换时，图像的变换情况，那么我可以直接单独更改a/b/c的值或者根据之积的需求来进行改变，然后点击drawagain，可以直接在原来图形的基础上直接画出想要的二次函数的图像，可以直接在同一张图中看出不同曲线的差异；如果我想要放大图像，放大原有的两个曲线的细节，那么我可以直接调整maxX和maxY的直接来放大查看。为了方便，我们添加了一个重置按钮，点击重置之后，会将原来的a、b、c清空，便于用户的重新输入。而为了保持图像的一致性，我们没有直接重置maxX和maxY和halfstep，但用户可以根据自己的需要来进行修改。
 
 # 我在小组中的分工
->你在小组中主要负责那部分工作，如果小组其他成员相比，你感觉你完成的怎么样？你觉得你组那个组员完成的最好，工作量最大？如果按10分计算，
-你给每个人（包括自己）各多少分，填写下表：
+
   
    组员|分数
  --|--
@@ -349,7 +348,7 @@ nav a.active {
 # 我的自评
 > 在本次项目中比较挫败，一度以为自己会开天窗，但是终于做出来了，虽然明后天还要考试，而我现在还是赶报告，但是我也感觉十分的轻松，真好！！！
 
->我确实在编程中这方面做的比较差，但是也一直想要尝试一下，所以在最开始我想要先做一下登录和注册部分，甚至弄了一整天，都没有弄出来，整个项目都没有提示错误，但是又不能运行出来，我感觉到十分十分的挫败，一气之下把代码全删掉了，现在回想起来有点心疼。在后面进行编程的过程中，真的是痛并快乐着，实在想不出来要怎么打，但是当有所收获之后又感觉很开心。在这次项目中，收回最大的应该是终于对angular有了进一步的了解，也终于明白了路由的用法。路由真的是我一开始就特别特别好奇，也特别特别想要了解的内容。所以这是这个项目中最开心的事情。
+>我确实在编程中这方面做的比较差，但是也一直想要尝试一下，所以在最开始我想要先做一下登录和注册部分，甚至弄了一整天，都没有弄出来，整个项目都没有提示错误，但是又不能运行出来，我感觉到十分十分的挫败，一气之下把代码全删掉了，现在回想起来有点心疼。在后面进行编程的过程中，真的是痛并快乐着，实在想不出来要怎么打，但是当有所收获之后又感觉很开心。果然是实践出真知，自己动手做真的比看再多的参考书收获都多。在这次项目中，收回最大的应该是终于对angular有了进一步的了解，也终于明白了路由的用法。路由真的是我一开始就特别特别好奇，也特别特别想要了解的内容。所以这是这个项目中最开心的事情。
 
 
 > 如果用**一整天8小时**时间计算，你有信心再用多少天完成你未目前完成的功能？
