--- a/doc/吴松二 10164507127 finalreport.md
+++ b/doc/吴松二 10164507127 finalreport.md
@@ -2,7 +2,11 @@
 # 产品创意
 在我们最开始的时候我们准备做的是课程表，课表的主要形式和我们数据库的是一样的，是将一周的课程全部一起显示而不是类似于微信端的那种只显示一天的课表。课表的功能有日程提示，用户可以手动添加客户才能有早期打卡和期末考试倒计时，自己添加考试时间，作业之类的，然后添加日程提醒，也可以是添加重要事件倒计时。但是后来一想如果需要导入课程的话需要用到教务处的资料，这我们是无法实现的，后来说我们可以自己手动添加课程表，自己输入自己每天的课程，那是一个问题解决了，第二个问题就是我们的课程表更倾向于日程表了，重点是我们想的基本上都是手机app忽略了web这一要求，结果这个想法就放弃了。之后我们要讨论了要不要做一个类似老师所给的进制转换那种类型的，就是汇率转换或者单位转换等，但是绝对不是很有必要最终都觉得进制转换太简单了，最终龙晶毅和张静雅都提出要不就做函数图像有关的（之前就有提出做函数图像相关的这个想法），最终经过我们的讨论，我们就决定做函数图像。二次函数是我们中学阶段一个很重要的知识点，数形结合思想是解决问题的一大关键方法。从二次函数本身来看，二次函数属于初高中的而一个基础板块和常见考点，二次函数自身具有较强的图形属性，函数图像性质清晰。数形结合的思想在数学的学习上非常的重要，要学习好这一板块内容的一个重要的前提就是要会根据函数解析式画出函数的图像，根据图像来得到函数对应的性质，最值，对称轴，开口方向等,所以我们认为做这样一个函数图像制作的工具是十分必要的。
 
-基于此，我们想做的产品是一款面向中学生的画图app。考虑到中学生主要学习且应用较多的函数是二次函数，因此我们的web app主要是针对二次函数的画图功能。与传统的画图软件不同的是，我们设计的画图功能更加完善、全面，而并不是简单地根据函数方程式在坐标系中画出二次函数的图像，我们的用户可以实现与图像的交互，比如用户可以通过鼠标拖动函数图像或者是图像上的坐标点。除了画图的功能外，我们的web app实现的是二次函数的一条龙服务，在这个app上还包含有关二次函数的基础知识，如二次函数的表示方法、二次函数的图像和性质、二次函数与方程不等式、二次函数应用题。在知识的设置上也不是知识简单的堆叠，而是把知识点和图像相结合，在对应知识板块的旁边放置一个函数画图模块，用户可以根据学习的知识在画图模块在进行实践。或者是在做应用题的时候，根据对应的系数在画图模块画二次函数的图像，这样用户就可以边做题边分析图像。
+基于此，我们想做的产品是一款面向中学生的画图app。考虑到中学生主要学习且应用较多的函数是二次函数，因此我们的web app主要是针对二次函数的画图功能。与传统的画图软件不同的是，我们设计的画图功能更加完善、全面，而并不是简单地根据函数方程式在坐标系中画出二次函数的图像，我们的用户可以实现与图像的交互，比如用户可以通过鼠标拖动函数图像或者是图像上的坐标点。除了画图的功能外，我们的web app实现的是二次函数的一条龙服务，在这个app上还包含有关二次函数的基础知识，如二次函数的表示方法、二次函数的图像和性质、二次函数与方程不等式、二次函数应用题。在知识的设置上也不是知识简单的堆叠，而是把知识点和图像相结合，在对应知识板块的旁边放置一个函数画图模块，用户可以根据学习的知识在画图模块在进行实践。或者是在做应用题的时候，根据对应的系数在画图模块画二次函数的图像，这样用户就可以边做题边分析图像。基于此，我们设计的原型如下：
+![原型1](https://github.com/ECNU-DEIT-2016/Project_Quadratic-function/blob/master/picture/1.png)
+
+>![原型2](https://github.com/ECNU-DEIT-2016/Project_Quadratic-function/blob/master/picture/2.png) 
+
 因此，我们想做的这一款web app整体功能架构并不大，但它专注于画图这一功能，希望能把这一功能做得精细，能够满足用户对于二次函数画图的所有需求。真正地帮助用户解决在学习中遇到的阻碍，无论是用户在刚学习二次函数的阶段，还是需要二次函数图像来做题时，都可以使用我们这款产品。
 
 在创意阶段，这个画图的观点不是我提出来的，是张静雅同学提出来我们要不做一个画图的软件，最开始是她提出的。之后小组成员进行讨论，设计更加详细的功能，设计页面布局，如何排版等问题、参与大家的讨论，发表自己的观点以及查找相关的资料。
@@ -90,6 +94,7 @@ main(){
 
 
 ## 我的活动量化
+![contributor](https://github.com/ECNU-DEIT-2016/Project_Quadratic-function/blob/master/picture/%E6%B4%BB%E5%8A%A8%E9%87%8F%E5%8C%96.jpg)
 > 3 commits  8 ++  9 --
 
 
